--- a/styles.css
+++ b/styles.css
@@ -291,8 +291,7 @@ body {
     text-align: center;
     background: var(--input-bg);
     color: var(--primary-text);
-    border: 2px solid var(--accent-gradient-start);
-    border-image: linear-gradient(90deg, var(--accent-gradient-start), var(--accent-gradient-end)) 1;
+    border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     box-sizing: border-box;
     line-height: 18px;
@@ -314,23 +313,20 @@ body {
 #prowizja .input-group .jednostka-select:focus {
     outline: none !important;
     box-shadow: 0 0 4px var(--accent-color);
-    border: 2px solid var(--accent-gradient-start);
-    border-image: linear-gradient(90deg, var(--accent-gradient-start), var(--accent-gradient-end)) 1;
+    border: 1px solid var(--border-color);
     background: var(--input-bg);
     color: var(--primary-text);
 }
 
 .dark-mode #rodzajRat .form-select,
 .dark-mode #prowizja .input-group .jednostka-select {
-    border: 2px solid var(--accent-gradient-start);
-    border-image: linear-gradient(90deg, var(--accent-gradient-start), var(--accent-gradient-end)) 1;
+    border: 1px solid var(--border-color);
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="%23a3945c" d="M0 3l5 5 5-5z"/></svg>') !important;
 }
 
 .dark-mode #rodzajRat .form-select:focus,
 .dark-mode #prowizja .input-group .jednostka-select:focus {
-    border: 2px solid var(--accent-gradient-start);
-    border-image: linear-gradient(90deg, var(--accent-gradient-start), var(--accent-gradient-end)) 1;
+    border: 1px solid var(--border-color);
 }
 
 .input-group-text {
@@ -1016,8 +1012,7 @@ input[type="range"].form-range:focus::-ms-thumb {
         width: 130px;
         padding: 4px 24px 4px 8px;
         line-height: 20px;
-        border: 2px solid var(--accent-gradient-start);
-        border-image: linear-gradient(90deg, var(--accent-gradient-start), var(--accent-gradient-end)) 1;
+        border: 1px solid var(--border-color);
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="%23C2B280" d="M0 3l5 5 5-5z"/></svg>') !important;
         background-repeat: no-repeat !important;
         background-position: right 8px center !important;
@@ -1044,8 +1039,7 @@ input[type="range"].form-range:focus::-ms-thumb {
 
     .dark-mode #rodzajRat .form-select,
     .dark-mode #prowizja .input-group .jednostka-select {
-        border: 2px solid var(--accent-gradient-start);
-        border-image: linear-gradient(90deg, var(--accent-gradient-start), var(--accent-gradient-end)) 1;
+        border: 1px solid var(--border-color);
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="%23a3945c" d="M0 3l5 5 5-5z"/></svg>') !important;
     }
 
