--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,8 @@ body {
 .checkbox-label {
     display: flex;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     font-size: clamp(0.65em, 1vw, var(--small-font-size));
     cursor: pointer;
     position: relative;
@@ -292,6 +294,7 @@ body {
     background: var(--input-bg);
     color: var(--primary-text);
     border: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     box-sizing: border-box;
     line-height: 18px;
@@ -306,7 +309,7 @@ body {
 
 #prowizja .input-group .jednostka-select {
     flex: 1;
-    border-radius: 2px;
+    border-radius: 2px !important;
 }
 
 #rodzajRat .form-select:focus,
@@ -314,6 +317,7 @@ body {
     outline: none !important;
     box-shadow: 0 0 4px var(--accent-color);
     border: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
     background: var(--input-bg);
     color: var(--primary-text);
 }
@@ -321,12 +325,14 @@ body {
 .dark-mode #rodzajRat .form-select,
 .dark-mode #prowizja .input-group .jednostka-select {
     border: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="%23a3945c" d="M0 3l5 5 5-5z"/></svg>') !important;
 }
 
 .dark-mode #rodzajRat .form-select:focus,
 .dark-mode #prowizja .input-group .jednostka-select:focus {
     border: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
 }
 
 .input-group-text {
@@ -1013,6 +1019,7 @@ input[type="range"].form-range:focus::-ms-thumb {
         padding: 4px 24px 4px 8px;
         line-height: 20px;
         border: 1px solid var(--border-color);
+        border-right: 1px solid var(--border-color);
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="%23C2B280" d="M0 3l5 5 5-5z"/></svg>') !important;
         background-repeat: no-repeat !important;
         background-position: right 8px center !important;
@@ -1034,12 +1041,13 @@ input[type="range"].form-range:focus::-ms-thumb {
     #prowizja .input-group .jednostka-select {
         flex: 1;
         width: auto;
-        border-radius: 2px;
+        border-radius: 2px !important;
     }
 
     .dark-mode #rodzajRat .form-select,
     .dark-mode #prowizja .input-group .jednostka-select {
         border: 1px solid var(--border-color);
+        border-right: 1px solid var(--border-color);
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><path fill="%23a3945c" d="M0 3l5 5 5-5z"/></svg>') !important;
     }
 
