--- a/styles.css
+++ b/styles.css
@@ -382,7 +382,7 @@ input[type="range"].form-range {
     height: 6px;
     background: var(--input-group-bg);
     border: 2px solid var(--border-color);
-    border-radius: var(---border-radius);
+    border-radius: var(--border-radius);
     appearance: none;
     width: 100%;
     margin-left: auto;
@@ -393,19 +393,19 @@ input[type="range"].form-range {
 input[type="range"].form-range::-webkit-slider-runnable-track {
     background: var(--input-group-bg);
     height: 6px;
-    border-radius: var(---border-radius);
+    border-radius: var(--border-radius);
 }
 
 input[type="range"].form-range::-moz-range-track {
     background: var(--input-group-bg);
     height: 6px;
-    border-radius: var(---border-radius);
+    border-radius: var(--border-radius);
 }
 
 input[type="range"].form-range::-ms-track {
     background: var(--input-group-bg);
     height: 6px;
-    border-radius: var(---border-radius);
+    border-radius: var(--border-radius);
 }
 
 input[type="range"].form-range::-webkit-slider-thumb {
@@ -455,14 +455,17 @@ input[type="range"].form-range:focus::-ms-thumb {
 /* D A R K   M O D E   -   S P E C Y F I C Z N E */
 .dark-mode input[type="range"].form-range::-webkit-slider-runnable-track {
     background: var(--input-group-bg);
+    border-radius: var(--border-radius);
 }
 
 .dark-mode input[type="range"].form-range::-moz-range-track {
     background: var(--input-group-bg);
+    border-radius: var(--border-radius);
 }
 
 .dark-mode input[type="range"].form-range::-ms-track {
     background: var(--input-group-bg);
+    border-radius: var(--border-radius);
 }
 
 .dark-mode input[type="range"].form-range::-webkit-slider-thumb {
